--- a/Exportado/listaProjetos.html
+++ b/Exportado/listaProjetos.html
@@ -18,17 +18,18 @@
     <link rel="stylesheet" href="assets/css/gradient-navbar.css">
     <link rel="stylesheet" href="assets/css/Lista-Productos-Canito.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body style="width: auto;height: auto;">
-    <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="margin: 5px;width: auto;height: auto;">
+    <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="margin: 5px;width: auto;height: auto;padding: 1px;">
         <div class="container-fluid"><a class="navbar-brand" href="#"><i class="icon ion-ios-infinite" id="brand-logo"></i></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#">First Item</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Second Item</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Third Item</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="home.html">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Meus Dados</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Logout</a></li>
                 </ul>
         </div>
         </div>
@@ -41,7 +42,7 @@
                 </div>
                 <div class="col-md-4 d-flex justify-content-end align-self-start" style="width: auto;height: auto;"><i class="fas fa-search d-xl-flex justify-content-xl-center align-items-xl-center"></i><input class="border rounded d-xl-flex justify-content-xl-center align-items-xl-center search-field" type="search" id="search-field" style="background-color: #eaeaea;width: 80%;height: 38px;padding: 0px;margin-left: 17px;"
                         name="search"></div>
-                <div class="col-md-4 d-flex justify-content-center align-items-center" style="width: auto;height: auto;"><button class="btn btn-primary d-flex align-items-center align-self-center" type="button" style="height: 38px;background-color: rgb(21,221,4);">Novo Projeto<i class="fa fa-plus-circle"></i></button></div>
+                <div class="col-md-4 d-flex justify-content-center align-items-center" style="width: auto;height: auto;"><a class="btn btn-primary d-flex align-items-center align-self-center" id="novoProjeto" type="button" href="novoProjeto.html" style="height: 38px;background-color: rgb(21,221,4);" name="novoProjeto">Novo Projeto<i class="fa fa-plus-circle"></i></a></div>
             </div>
             <div class="row">
                 <div class="col-md-12"><table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -61,12 +62,8 @@
                 <td>23.500</td>
                 <td>
                     <button type="button" class="btn btn-danger"><i class="far fa-trash-alt d-xl-flex justify-content-xl-center align-items-xl-center"></i></button>
-                    <button type="button" class="btn btn-warning"><i class="fas fa-pencil-alt d-xl-flex justify-content-xl-center align-items-xl-center"></i></button>
-                    <button type="button" class="btn btn-warning">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-zip-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm7 2l.5-2.5 3 3L10 5a1 1 0 0 1-1-1zM5.5 3V2h-1V1H6v1h1v1H6v1h1v1H6v1h1v1H5.5V6h-1V5h1V4h-1V3h1zm0 4.5a1 1 0 0 0-1 1v.938l-.4 1.599a1 1 0 0 0 .416 1.074l.93.62a1 1 0 0 0 1.109 0l.93-.62a1 1 0 0 0 .415-1.074l-.4-1.599V8.5a1 1 0 0 0-1-1h-1zm0 1.938V8.5h1v.938a1 1 0 0 0 .03.243l.4 1.598-.93.62-.93-.62.4-1.598a1 1 0 0 0 .03-.243z"/>
-                        </svg>
-                    </button>
+                    <button type="button" class="btn btn-primary"><i class="fas fa-pencil-alt d-xl-flex justify-content-xl-center align-items-xl-center"></i></button>
+                    <button type="button" class="btn btn-primary"><i class="fa fa-archive d-xl-flex justify-content-xl-center align-items-xl-center" ></i></button>
                 </td>
             </tr>
         </tbody>
