--- a/Exportado/novoProjeto.html
+++ b/Exportado/novoProjeto.html
@@ -4,12 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>listaProjetos</title>
+    <title>novoProjeto</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/Dark-NavBar-1.css">
     <link rel="stylesheet" href="assets/css/Dark-NavBar-2.css">
     <link rel="stylesheet" href="assets/css/Dark-NavBar.css">
@@ -22,54 +20,60 @@
 </head>
 
 <body style="width: auto;height: auto;">
-    <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="margin: 5px;width: auto;height: auto;">
+    <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="margin: 5px;width: auto;height: auto;padding: 1px;">
         <div class="container-fluid"><a class="navbar-brand" href="#"><i class="icon ion-ios-infinite" id="brand-logo"></i></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#">First Item</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Second Item</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Third Item</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="home.html">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">MeusDados</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Logout</a></li>
                 </ul>
         </div>
         </div>
     </nav>
     <div style="width: auto;height: auto;">
-        <div class="container" style="width: auto;height: auto;">
-            <div class="row" style="width: auto;height: auto;">
-                <div class="col-md-4" style="width: auto;height: auto;">
-                    <h2 style="width: 343px;">Lista de Projetos</h2>
+        <form id="novoProjeto" method="post" action="/novoProduto">
+            <div class="container" style="width: auto;height: auto;">
+                <div class="form-row" style="width: auto;height: auto;">
+                    <div class="col-md-4" style="width: auto;height: auto;">
+                        <h2 style="width: 343px;">Novo Projeto</h2>
+                    </div>
+                    <div class="col-md-4 d-flex justify-content-end align-self-start" style="width: auto;height: auto;"></div>
+                    <div class="col-md-4 d-flex justify-content-center align-items-center" style="width: auto;height: auto;"><button class="btn btn-primary d-flex align-items-center align-self-center" id="salvar" type="button" style="height: 38px;background-color: rgb(21,221,4);">Salvar&nbsp;<i class="fa fa-plus-circle"></i></button></div>
                 </div>
-                <div class="col-md-4 d-flex justify-content-end align-self-start" style="width: auto;height: auto;"><i class="fas fa-search d-xl-flex justify-content-xl-center align-items-xl-center"></i><input class="border rounded d-xl-flex justify-content-xl-center align-items-xl-center search-field" type="search" id="search-field" style="background-color: #eaeaea;width: 80%;height: 38px;padding: 0px;margin-left: 17px;"
-                        name="search"></div>
-                <div class="col-md-4 d-flex justify-content-center align-items-center" style="width: auto;height: auto;"><button class="btn btn-primary d-flex align-items-center align-self-center" type="button" style="height: 38px;background-color: rgb(21,221,4);">Novo Projeto<i class="fa fa-plus-circle"></i></button></div>
+                <div class="form-row">
+                    <div class="col-md-12">
+                        <form>
+                            <div class="form-row">
+                                <div class="col-sm-12">
+                                    <div class="form-group"><label>Título</label><input class="form-control" type="text" id="titulo" name="titulo"></div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col-sm-6">
+                                    <div class="form-group"><label>Cliente</label><select class="form-control" id="cliente" name="cliente"><optgroup label="This is a group"><option value="12" selected="">This is item 1</option><option value="13">This is item 2</option><option value="14">This is item 3</option></optgroup></select></div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="form-group"><label>Proposta</label><select class="form-control" id="proposta" name="proposta"><optgroup label="This is a group"><option value="12" selected="">This is item 1</option><option value="13">This is item 2</option><option value="14">This is item 3</option></optgroup></select></div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col-sm-3">
+                                    <div class="form-group"><label>Data Prevista para início</label><input class="form-control" id="dataPrevInicio" type="date" name="dataPrevInicio"></div>
+                                </div>
+                                <div class="col-sm-3">
+                                    <div class="form-group"><label>Data Prevista para o término</label><input class="form-control" id="dataPrevFim" type="date"></div>
+                                </div>
+                                <div class="col-sm-3">
+                                    <div class="form-group"><label>Tempo estimado (em horas)</label><input class="form-control" type="text" id="tempoEstimado" name="tempoEstimado"></div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="row">
-                <div class="col-md-12"><table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
-        <thead>
-            <tr>
-                <th>Título</th>
-                <th>Cliente</th>
-                <th>Status</th>
-                <th>Ações</th>
-            </tr>
-        </thead>
-        <tbody>
-           
-            <tr>
-                <td>Torta Mil Horas</td>
-                <td>Pasteles</td>
-                <td>23.500</td>
-                <td>
-                    <button type="button" class="btn btn-danger"><i class="far fa-trash-alt d-xl-flex justify-content-xl-center align-items-xl-center"></i></button>
-                    <button type="button" class="btn btn-primary"><i class="fas fa-pencil-alt d-xl-flex justify-content-xl-center align-items-xl-center"></i></button>
-                    <button type="button" class="btn btn-primary"><i class="fa fa-archive d-xl-flex justify-content-xl-center align-items-xl-center" ></i></button>
-                </td>
-            </tr>
-        </tbody>
-    </table></div>
-            </div>
-        </div>
+        </form>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
