Correção de telas e nova tela de relatórios

--- a/Exportado/novoProjeto.html
+++ b/Exportado/novoProjeto.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="margin: 5px;width: auto;height: auto;padding: 1px;">
         <div class="container-fluid"><a class="navbar-brand" href="#"><i class="icon ion-ios-infinite" id="brand-logo"></i></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
-                class="collapse navbar-collapse" id="navcol-1">
+                class="collapse navbar-collapse" id="navcol-1" style="width: auto;height: auto;margin: 5px;padding: 1px;">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="home.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">MeusDados</a></li>
