--- a/Exportado/home.html
+++ b/Exportado/home.html
@@ -51,13 +51,18 @@
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="fa fa-calendar icon"></i>
-                        <h3 class="name">Relatório Mensal</h3>
+                        <h3 class="name">Relatório De Horas&nbsp;</h3>
                         <p class="description">Aqui você poderá ver os dias que ja possuem apontamento de horas e o total de horas apontadas para cada dia,</p><a class="learn-more" href="#">Abrir &gt;&gt;</a></div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="fa fa-cogs icon"></i>
                         <h3 class="name">Configuração</h3>
                         <p class="description">Configurações do seu usuário.</p><a class="learn-more" href="#">Abrir &gt;&gt;</a></div>
+                </div>
+                <div class="col-sm-6 col-md-5 col-lg-4 item">
+                    <div class="box"><i class="fa fa-tasks icon"></i>
+                        <h3 class="name">Relatórios</h3>
+                        <p class="description">Adicionar, Editar ou Remover usuários do sistema de controle</p><a id="relatorios" class="learn-more" href="relatorios.html" name="relatorios">Abrir &gt;&gt;</a></div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="fa fa-users icon"></i>
