--- a/Exportado/listaProjetos.html
+++ b/Exportado/listaProjetos.html
@@ -6,74 +6,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>listaProjetos</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/Dark-NavBar-1.css">
-    <link rel="stylesheet" href="assets/css/Dark-NavBar-2.css">
-    <link rel="stylesheet" href="assets/css/Dark-NavBar.css">
-    <link rel="stylesheet" href="assets/css/Features-Boxed.css">
+    <link rel="stylesheet" href="assets/css/Custom-Card.css">
     <link rel="stylesheet" href="assets/css/gradient-navbar-1.css">
     <link rel="stylesheet" href="assets/css/gradient-navbar.css">
-    <link rel="stylesheet" href="assets/css/Lista-Productos-Canito.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="assets/css/progress-bars.css">
+    <link rel="stylesheet" href="assets/css/Steps-Progressbar.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
-<body style="width: auto;height: auto;">
-    <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="margin: 5px;width: auto;height: auto;padding: 1px;">
+<body>
+    <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="width: auto;height: auto;margin: 5px;padding: 1px;">
         <div class="container-fluid"><a class="navbar-brand" href="#"><i class="icon ion-ios-infinite" id="brand-logo"></i></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="home.html">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/home">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Meus Dados</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Logout</a></li>
                 </ul>
         </div>
         </div>
     </nav>
-    <div style="width: auto;height: auto;">
-        <div class="container" style="width: auto;height: auto;">
-            <div class="row" style="width: auto;height: auto;">
-                <div class="col-md-4" style="width: auto;height: auto;">
-                    <h2 style="width: 343px;">Lista de Projetos</h2>
-                </div>
-                <div class="col-md-4 d-flex justify-content-end align-self-start" style="width: auto;height: auto;"><i class="fas fa-search d-xl-flex justify-content-xl-center align-items-xl-center"></i><input class="border rounded d-xl-flex justify-content-xl-center align-items-xl-center search-field" type="search" id="search-field" style="background-color: #eaeaea;width: 80%;height: 38px;padding: 0px;margin-left: 17px;"
-                        name="search"></div>
-                <div class="col-md-4 d-flex justify-content-center align-items-center" style="width: auto;height: auto;"><a class="btn btn-primary d-flex align-items-center align-self-center" id="novoProjeto" type="button" href="novoProjeto.html" style="height: 38px;background-color: rgb(21,221,4);" name="novoProjeto">Novo Projeto<i class="fa fa-plus-circle"></i></a></div>
-            </div>
+    <div>
+        <div class="container">
             <div class="row">
-                <div class="col-md-12"><table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
-        <thead>
-            <tr>
-                <th>Título</th>
-                <th>Cliente</th>
-                <th>Status</th>
-                <th>Ações</th>
-            </tr>
-        </thead>
-        <tbody>
-           
-            <tr>
-                <td>Torta Mil Horas</td>
-                <td>Pasteles</td>
-                <td>23.500</td>
-                <td>
-                    <button type="button" class="btn btn-danger"><i class="far fa-trash-alt d-xl-flex justify-content-xl-center align-items-xl-center"></i></button>
-                    <button type="button" class="btn btn-primary"><i class="fas fa-pencil-alt d-xl-flex justify-content-xl-center align-items-xl-center"></i></button>
-                    <button type="button" class="btn btn-primary"><i class="fa fa-archive d-xl-flex justify-content-xl-center align-items-xl-center" ></i></button>
-                </td>
-            </tr>
-        </tbody>
-    </table></div>
+                <div class="col-md-6">
+                    <h1>Lista de Projetos</h1>
+                </div>
+                <div class="col-md-6 col-lg-5 text-right align-self-center" style="padding: 0px;"><button class="btn btn-primary" type="button">Novo Projeto&nbsp;<i class="icon-plus"></i></button></div>
             </div>
         </div>
     </div>
+    <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Projeto</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Projeto 1 - Projeto Facil</td>
+                                </tr>
+                                <tr>
+                                    <td>Projeto 2 - Projeto mais complicado</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col">
+                            <h5>Passos do Projeto</h5>
+                            <div class="steps-progressbar">
+                                <ul>
+                                    <li class="previous">Item 1</li>
+                                    <li class="active">Item 2</li>
+                                    <li>Item 3</li>
+                                    <li>Item 4</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="row">
+                                <div class="col-md-4 col-lg-12">
+                                    <h5>Progresso</h5>
+                                    <div class="progress beautiful progress-lg">
+                                        <div class="progress-bar bg-danger" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">80%</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header"><a class="btn header-arrow-btn" role="button" data-toggle="collapse" href="#detailed-view"><i class="fa fa-chevron-right"></i><i class="fa fa-chevron-down"></i></a><span>Sample-Card</span>
+                                    <div class="btn-group custom-btngrp"
+                                        role="group"><button class="btn btn-outline-primary" type="button"><i class="fa fa-tasks"></i><span>Editar</span></button><button class="btn btn-outline-danger" type="button"><i class="fa fa-trash"></i><span>Deletar</span></button>
+                                        <div
+                                            class="dropdown btn-group no-arrow" role="group"><button class="btn btn-outline-primary dropdown-toggle border-primary" data-toggle="dropdown" aria-expanded="false" type="button"><i class="fas fa-ellipsis-h" data-bs-hover-animate="rubberBand"></i></button>
+                                            <div
+                                                class="dropdown-menu dropdown-menu-right animated--fade-in" role="menu"><a class="dropdown-item" role="presentation" href="#">Change Log</a><a class="dropdown-item" role="presentation" href="#">Duplicate</a>
+                                                <div class="dropdown-divider"></div><a class="dropdown-item" role="presentation" href="#">Action</a></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body collapse show" id="detailed-view">
+                            <div>
+                                <ul class="nav nav-tabs">
+                                    <li class="nav-item"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1">Dados Atuais</a></li>
+                                    <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2">Dados Estimados</a></li>
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" role="tabpanel" id="tab-1">
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <div class="row">
+                                                    <div class="col-md-4 label-col"><label class="col-form-label">Inicio</label></div>
+                                                    <div class="col-md-8 data-col"><span>Sample User</span></div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <div class="row">
+                                                    <div class="col-md-4 label-col"><label class="col-form-label">Person</label></div>
+                                                    <div class="col-md-8 data-col"><span>Sample User</span></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="tab-pane" role="tabpanel" id="tab-2"><span>No Record Found</span></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/novoProjeto.js"></script>
+    <script src="assets/js/bs-init.js"></script>
 </body>
 
 </html>
